# CopilotCrew

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
agents/: coder.md
crew/: __init__.py  agent_registry.py  cli.py  conversations.py  direct.py  evaluator.py  hooks.py  intent_router.py  pipeline_registry.py  pipeline_runner.py  skill_registry.py  streamer.py
crew/gui/: __init__.py  __main__.py  app.py  config.py  server.py
crew/harness/: __init__.py  agent_loader.py  context_builder.py  correction_loop.py  executor.py  skill_loader.py  state.py  verifier.py
crew/sdk/: mcp.py
docs/: API.md  ARCHITECTURE.md  GUI.md
packaging/: README.md  build.py  crew_gui.spec
pipelines/code-review-routing/: README.md  pipeline.yaml
pipelines/incident-triage/: README.md  pipeline.yaml
pipelines/release-notes/: README.md  pipeline.yaml
pipelines/standup/: README.md  pipeline.yaml
pipelines/ticket-refinement/: README.md  pipeline.yaml
skills/debug/: SKILL.md
tests/: conftest.py  test_agent_loader.py  test_agent_registry.py  test_cli_routing.py  test_conversations.py  test_evaluator.py  test_harness_imports.py  test_hooks.py  test_intent_router.py  test_pipeline_registry.py  test_pipeline_runner.py  test_skill_registry.py  test_streamer.py
tests/fixtures/: fake_copilot.py  sample_agent.md
tests/gui/: conftest.py  test_chat.py  test_cli_gui_entrypoint.py  test_events_sse.py  test_home.py  test_mocks.py  test_packaging.py  test_pinned.py  test_pinned_actions.py  test_server_desktop.py  test_settings.py  test_standup.py  (+1 more)
(+101 files in other folders)
