[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew"
version = "0.1.0"
description = "Terminal-native virtual assistant powered by Copilot SDK."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk @ git+https://github.com/github/copilot-sdk.git#subdirectory=python",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
crew = "crew.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["crew"]
