[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crew"
version = "0.1.0"
description = "Terminal-native virtual assistant powered by Copilot SDK."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "github-copilot-sdk>=0.2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
gui = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "pywebview>=5.0",
]

[project.scripts]
crew = "crew.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["crew"]

[tool.hatch.build.targets.wheel.force-include]
"crew/gui/templates" = "crew/gui/templates"
"crew/gui/static" = "crew/gui/static"
"crew/gui/fixtures" = "crew/gui/fixtures"
